# Knightly

./: Knightly prezentáció.pptx
.github/workflows/: dispatcher.yml  engine_test.yml  release.yml  server_test.yml  test.sh  ui_test.yml  upload_data.yml
Docs/: Knightly rendszerterv v1.xml  funk_spec.md  kovspec.md  rendszerterv.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/src/: bitboard.rs  boardsquare.rs  chessmove.rs  gameend.rs  lib.rs  movetype.rs  piecetype.rs
engine/src/bitboard/: attackmaps.rs  attacks.rs  bitmove.rs  board.rs  legality.rs  makemove.rs  movebuffer.rs  movegen.rs  utils.rs
engine/src/bitboard/makemove/: captures.rs  castles.rs  quiets.rs
engine/src/bitboard/movegen/: bishops.rs  kings.rs  knights.rs  pawns.rs  queens.rs  rooks.rs
server/: Cargo.toml
server/src/: broadcast_message.rs  connection.rs  events.rs  handle_connection.rs  main.rs  matchmaking.rs  messages.rs  server_event.rs
src/: settings.rs
ui/: Cargo.toml
ui/src/: connection.rs  main.rs  settings.rs
